--- a/index.html
+++ b/index.html
@@ -231,7 +231,35 @@
 
         <!-- Portfolio Recent Projects -->
         <div id="portfolio" class="row">
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix self">
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix personal">
+            <div class="portfolio-item">
+              <div class="shot-item">
+                <picture>
+                  <source srcset="img/portfolio/img1.webp" type="image/webp">
+                  <source srcset="img/portfolio/img1.jpg" type="image/jpeg">
+                  <img src="img/portfolio/img1.jpg" alt="Gallery Image" />
+                </picture>
+                <!-- <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img1.jpg">
+                    <i class="lnr lnr-eye item-icon"></i>
+                  </a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix personal">
+            <div class="portfolio-item">
+              <div class="shot-item">
+                <picture>
+                  <source srcset="img/portfolio/img2.webp" type="image/webp">
+                  <source srcset="img/portfolio/img2.jpg" type="image/jpeg">
+                  <img src="img/portfolio/img2.jpg" alt="Gallery Image" />
+                </picture>
+                <!-- <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img2.jpg">
+                    <i class="lnr lnr-eye item-icon"></i>
+                  </a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix personal">
             <div class="portfolio-item">
               <div class="shot-item">
                 <picture>
@@ -239,13 +267,13 @@
                   <source srcset="img/portfolio/img3.jpg" type="image/jpeg">
                   <img src="img/portfolio/img3.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img3.jpg">
+                <!-- <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img3.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
-                  </a>
+                  </a> -->
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix self">
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix personal">
             <div class="portfolio-item">
               <div class="shot-item">
                 <picture>
@@ -253,9 +281,9 @@
                   <source srcset="img/portfolio/img4.jpg" type="image/jpeg">
                   <img src="img/portfolio/img4.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img4.jpg">
+                <!-- <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img4.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
-                  </a>
+                  </a> -->
               </div>
             </div>
           </div>
@@ -267,9 +295,9 @@
                   <source srcset="img/portfolio/img5.jpg" type="image/jpeg">
                   <img src="img/portfolio/img5.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img5.jpg">
+                <!-- <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img5.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
-                  </a>
+                  </a> -->
               </div>
             </div>
           </div>
@@ -281,9 +309,9 @@
                   <source srcset="img/portfolio/img6.jpg" type="image/jpeg">
                   <img src="img/portfolio/img6.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img6.jpg">
+                <!-- <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img6.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
-                  </a>
+                  </a> -->
               </div>
             </div>
           </div>
